==> Firmament-Autopilot/FMT-Firmware/target/gd32/gd32f450/drivers/drv_rc.c <==
/******************************************************************************
 * Copyright 2022 The Firmament Authors. All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *****************************************************************************/

#include <firmament.h>

#include "hal/rc/ppm.h"
#include "hal/rc/rc.h"

/* default config for rc device */
#define RC_CONFIG_DEFAULT                      \
    {                                          \
        RC_PROTOCOL_SBUS, /* sbus */           \
            6,            /* 6 channel */      \
            0.05f,        /* sample time */    \
            1000,         /* minimal 1000us */ \
            2000,         /* maximal 2000us */ \
    }

static ppm_decoder_t ppm_decoder;

void TIMER2_IRQHandler(void)
{
    if (SET == timer_interrupt_flag_get(TIMER2, TIMER_INT_CH0)) {
        /* clear channel 0 interrupt bit */
        timer_interrupt_flag_clear(TIMER2, TIMER_INT_CH0);

        uint32_t ic_val = timer_channel_capture_value_register_read(TIMER2, TIMER_CH_0) + 1;
        ppm_update(&ppm_decoder, ic_val);
    }
}

static rt_err_t ppm_lowlevel_init(void)
{
    /* initialize gpio */

    rcu_periph_clock_enable(RCU_GPIOB);

    /*configure PB4 (TIMER2 CH0) as alternate function*/
    gpio_mode_set(GPIOB, GPIO_MODE_AF, GPIO_PUPD_NONE, GPIO_PIN_4);
    gpio_output_options_set(GPIOB, GPIO_OTYPE_PP, GPIO_OSPEED_50MHZ, GPIO_PIN_4);

    gpio_af_set(GPIOB, GPIO_AF_2, GPIO_PIN_4);

    /* initialize isr */

    nvic_priority_group_set(NVIC_PRIGROUP_PRE1_SUB3);
    nvic_irq_enable(TIMER2_IRQn, 1, 1);

    /* timer configuration for input capture */

    timer_ic_parameter_struct timer_icinitpara;
    timer_parameter_struct timer_initpara;
    uint32_t APB1_2_PrescalerValue;

    rcu_periph_clock_enable(RCU_TIMER2);

    /* When TIMERSEL is set, the TIMER clock is equal to CK_AHB(CK_TIMERx = CK_AHB). */
    rcu_timer_clock_prescaler_config(RCU_TIMER_PSC_MUL4);

    /* APB1_2_PrescalerValue = SystemCoreClock / TARGET_TIMER_CLK */
    APB1_2_PrescalerValue = SystemCoreClock / PPM_DECODER_FREQUENCY - 1;

    timer_deinit(TIMER2);
    /* TIMER2 configuration */
    timer_initpara.prescaler = APB1_2_PrescalerValue;
    timer_initpara.alignedmode = TIMER_COUNTER_EDGE;
    timer_initpara.counterdirection = TIMER_COUNTER_UP;
    timer_initpara.period = 65535;
    timer_initpara.clockdivision = TIMER_CKDIV_DIV1;
    timer_initpara.repetitioncounter = 0;
    timer_init(TIMER2, &timer_initpara);

    /* TIMER2  configuration */
    /* TIMER2 CH0 input capture configuration */
    timer_icinitpara.icpolarity = TIMER_IC_POLARITY_RISING;
    timer_icinitpara.icselection = TIMER_IC_SELECTION_DIRECTTI;
    timer_icinitpara.icprescaler = TIMER_IC_PSC_DIV1;
    timer_icinitpara.icfilter = 0x0;
    timer_input_capture_config(TIMER2, TIMER_CH_0, &timer_icinitpara);

    /* auto-reload preload enable */
    timer_auto_reload_shadow_enable(TIMER2);
    /* clear channel 0 interrupt bit */
    timer_interrupt_flag_clear(TIMER2, TIMER_INT_CH0);
    /* channel 0 interrupt enable */
    timer_interrupt_enable(TIMER2, TIMER_INT_CH0);

    /* TIMER2 counter enable */
    timer_enable(TIMER2);

    return RT_EOK;
}

static rt_err_t rc_control(rc_dev_t rc, int cmd, void* arg)
{
    ppm_decoder_t* decoder = (ppm_decoder_t*)rc->parent.user_data;

    switch (cmd) {
    case RC_CMD_CHECK_UPDATE: {
        uint8_t updated = 0;
        if (rc->config.protocol == RC_PROTOCOL_SBUS) {

        } else if (rc->config.protocol == RC_PROTOCOL_PPM) {
            updated = ppm_data_ready(decoder);
        }

        *(uint8_t*)arg = updated;
    } break;

    default:
        break;
    }

    return RT_EOK;
}

static rt_uint16_t rc_read(rc_dev_t rc, rt_uint16_t chan_mask, rt_uint16_t* chan_val)
{
    uint16_t* index = chan_val;
    ppm_decoder_t* decoder = (ppm_decoder_t*)rc->parent.user_data;
    rt_uint16_t rb = 0;

    if (rc->config.protocol == RC_PROTOCOL_SBUS) {

    } else if (rc->config.protocol == RC_PROTOCOL_PPM) {
        if (ppm_data_ready(decoder) == 0) {
            /* no data received, just return */
            return 0;
        }

        ppm_lock(decoder);
        for (uint8_t i = 0; i < decoder->total_chan; i++) {
            if (chan_mask & (1 << i)) {
                *(index++) = decoder->ppm_val[i];
                rb += 2;
            }
        }
        ppm_unlock(decoder);

        ppm_data_clear(decoder);
    }

    return rb;
}

const static struct rc_ops rc_ops = {
    .rc_configure = NULL,
    .rc_control = rc_control,
    .rc_read = rc_read,
};

static struct rc_device rc_dev = {
    .config = RC_CONFIG_DEFAULT,
    .ops = &rc_ops,
};

rt_err_t drv_rc_init(void)
{
    /* init ppm driver */
    RT_TRY(ppm_lowlevel_init());

    /* init ppm decoder */
    RT_TRY(ppm_decoder_init(&ppm_decoder));

    RT_CHECK(hal_rc_register(&rc_dev, "rc", RT_DEVICE_FLAG_RDWR, &ppm_decoder));

    return RT_EOK;
}
